[tool.poetry]
name = "sebas-poe-tools"
version = "0.1.0"
description = ""
authors = ["swozny <arpheno@gmail.com>"]
readme = "README.md"
packages = [{include = "sebas_poe_tools"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
poe = { path = "./poe", develop = true }



[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
