[tool.poetry]
name = "sebas-poe-tools"
version = "0.1.0"
description = ""
authors = ["swozny <arpheno@gmail.com>"]
readme = "README.md"
packages = [{include = "sebas_poe_tools"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
poe = { path = "./poe", develop = true }
jupyter = "^1.0.0"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
plotly = "^5.13.0"
jupyterthemes = "^0.20.0"
factory-boy = "^3.2.1"
pydantic-cli = "^4.3.0"
datamodel-code-generator = "^0.17.1"
django = "^4.2"
django-cors-headers = "^3.14.0"
dataenforce = "^0.1.2"
pydtmc = "^8.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pydantic-cli = "^4.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
